fix sonar issues